# playground

./: .envrc  .gitignore  README.md  devenv.nix  flake.nix  main.py  pyproject.toml  versions.nix
.github/workflows/: blank.yml  build.yaml  poetry.yaml
hello/: Dockerfile
mussel/: Dockerfile
nix/: flake.nix
patches/: bldr.patch  toolchain.patch
pkgs/: Dockerfile  flake.nix
playground/: __init__.py  __main__.py  config.py  errors.py  markov.py  markov_unigram.py
steps/: bldr-build-host.nix  bldr-build-target.nix  bldr-build.nix  bldr-patch-host.nix  bldr-patch-target.nix  bldr-patch.nix  default.nix  pkgs-build-host.nix  pkgs-patch-host.nix  prepare.nix  prepare.sh  toolchain-build.nix  toolchain-patch.nix
