[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Demo Python project using Poetry."
authors = ["Attila Oláh <attilaolah@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
flask = "^3.0.3"
zope-interface = "^6.4.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
